--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,8 @@
     "prettier/prettier": "error",
     "no-unused-expressions": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/ban-types": ["off"]
   },
   "settings": {
     "import/resolver": {
