Dashboard - providers list

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
     "no-unused-expressions": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-types": ["off"]
+    "@typescript-eslint/ban-types": ["off"],
+    "camelcase": "off",
   },
   "settings": {
     "import/resolver": {
