--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-types": ["off"],
-    "camelcase": "off",
+    "camelcase": "off"
   },
   "settings": {
     "import/resolver": {
